Fix issues with the crawl status not centered properly, fixed cross-browser issues.

--- a/frontend/src/sass/broken.scss
+++ b/frontend/src/sass/broken.scss
@@ -18,7 +18,7 @@ p {
   letter-spacing: 0.2px;
 }
 
-input[type="text"] {
+input[type="url"] {
   height: 38px;
   padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
   background-color: #fff;
@@ -141,6 +141,8 @@ form {
   z-index: 97;
   display: flex;
   align-items: center;
+  left: 0;
+  right: 0;
 }
 
 #crawl-status-padding {
